[package]
name = "hyperpixel2r-touch"
version = "0.1.0"
edition = "2021"
authors = ["Tasuku Suzuki"]
description = "Userspace touch daemon for Pimoroni HyperPixel 2r round display on Raspberry Pi"
license = "MIT"
repository = "https://github.com/task-jp/hyperpixel2r-touch"
keywords = ["raspberry-pi", "hyperpixel", "touch", "input", "embedded"]
categories = ["hardware-support", "embedded"]
readme = "README.md"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["ioctl"] }

[[bin]]
name = "hyperpixel2r-touch"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
